--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "Simple-Webview",
+  "name": "simple-webview",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "electron ."
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "electron": "^10.1.3"
+  }
 }
